# neetcode

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMMIT_MESSAGE.txt  Makefile  README.md  README_zh-TW.md  _check_status.py  _fix_all_tests.py  _update_generators.py  _update_generators_strings.py  build.bat  build.sh  build_docs.bat  build_docs.sh  coverage-report.json  mkdocs.yml  new_problem.bat  new_problem.sh  pyproject.toml  pytest.ini  requirements.txt  run_case.bat  run_case.sh  run_tests.bat  run_tests.sh  test_debug.py  test_import.py  test_output.py
.dev/: DOCUMENTATION_ARCHITECTURE.md  README.md  TESTING.md  VIRTUAL_ENV_SETUP.md  run_all_tests.bat  run_all_tests.sh  run_tests.bat  run_tests.sh  run_tests_solutions.bat  run_tests_solutions.sh
.neetcode/: README.md  codegen.toml
config/: problem-support.yaml
docs/: ACT_LOCAL_GITHUB_ACTIONS.md  ARCHITECTURE_MIGRATION.md  BUILD_DOCS_MANUAL.md  BingSiteAuth.xml  DOCUMENTATION_HEADER_SPEC.md  GENERATOR_CONTRACT.md  GITHUB_PAGES_SETUP.md  LOCAL_DOCS_BUILD.md  MKDOCS_CONTENT_GUIDE.md  ONTOLOGY_DESIGN.md  SOLUTION_CONTRACT.md  TOOLS.md  act-local-github-actions.md  architecture-migration.md  authors.yml  benchmark_ascii_table.txt  benchmark_data.json  benchmarks-full.md  benchmarks.md  build-docs-manual.md  codegen-spec.md  documentation-header-spec.md  github-pages-setup.md  index.md  index_zh-TW.md  large_n_data.json  local-docs-build.md  mkdocs-content-guide.md  ontology-design.md  packages-architecture-spec.md  review-code.md  robots.txt  solution-contract.md
generators/: 0001_two_sum.py  0002_add_two_numbers.py  0003_longest_substring_without_repeating_characters.py  0004_median_of_two_sorted_arrays.py  0005_longest_palindromic_substring.py  0007_reverse_integer.py  0008_string_to_integer_atoi.py  0010_regular_expression_matching.py  0011_container_with_most_water.py  0015_3sum.py  0016_3sum_closest.py  0017_letter_combinations_of_a_phone_number.py  0019_remove_nth_node_from_end_of_list.py  0020_valid_parentheses.py  0021_merge_two_sorted_lists.py  0022_generate_parentheses.py  0023_merge_k_sorted_lists.py  0025_reverse_nodes_in_k_group.py  0026_remove_duplicates_from_sorted_array.py  0027_remove_element.py  0028_find_the_index_of_the_first_occurrence_in_a_string.py  0029_divide_two_integers.py  0031_next_permutation.py  0033_search_in_rotated_sorted_array.py  0034_find_first_and_last_position_of_element_in_sorted_array.py  0035_search_insert_position.py  0036_valid_sudoku.py  0039_combination_sum.py  0040_combination_sum_ii.py  0042_trapping_rain_water.py  0043_multiply_strings.py  0044_wildcard_matching.py  0045_jump_game_ii.py  0046_permutations.py  0047_permutations_ii.py  0048_rotate_image.py  0049_group_anagrams.py  0050_powx_n.py  0051_n_queens.py  0052_n_queens_ii.py  (+256 more)
mkdocs_plugins/: mindmaps_lastmod.py  mindmaps_lastmod.yml
ontology/: algorithms.toml  api_kernels.toml  companies.toml  data_structures.toml  difficulties.toml  families.toml  patterns.toml  roadmaps.toml  topics.toml
practices/: 0023_merge_k_sorted_lists.py
roadmaps/: binary_search_path.toml  bitmask_dp_path.toml  blind_75.toml  dp_1d_linear_path.toml  dp_knapsack_subset_path.toml  graph_traversal_path.toml  greedy_core_path.toml  grid_bfs_multi_source_path.toml  heap_path.toml  interval_dp_path.toml  interval_pattern_path.toml  k_way_merge_path.toml  line_sweep_path.toml  linked_list_in_place_reversal_path.toml  math_number_theory_path.toml  monotonic_deque_path.toml  monotonic_stack_path.toml  neetcode_150.toml  prefix_sum_path.toml  segment_tree_fenwick_path.toml  sliding_window_path.toml  string_dp_path.toml  string_matching_path.toml  tree_dp_path.toml  tree_traversal_path.toml  union_find_pattern_path.toml
runner/: README.md  (+14 more)
(+2193 files in other folders)
