[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neetcode"
version = "0.1.0"
description = "NeetCode Practice Framework"
requires-python = ">=3.8"
dependencies = ["pyyaml", "tomli;python_version<'3.11'"]

[project.scripts]
codegen = "packages.codegen.cli:main"
practice = "packages.practice_workspace.cli:main"

[project.entry-points."mkdocs.plugins"]
mindmaps-lastmod = "mkdocs_plugins.mindmaps_lastmod:MindmapsLastmodPlugin"

[tool.setuptools]
# Explicitly list all packages
packages = [
    "generators",
    "mkdocs_plugins",
    "runner",
    "runner.utils",
    "runner.display", 
    "runner.analysis",
    "runner.core",
    "packages",
    "packages.leetcode_datasource",
    "packages.leetcode_datasource.models",
    "packages.leetcode_datasource.storage",
    "packages.leetcode_datasource.serialization",
    "packages.leetcode_datasource.fetchers",
    "packages.codegen",
    "packages.codegen.core",
    "packages.codegen.core.helpers",
    "packages.codegen.reference",
    "packages.codegen.practice",
    "packages.practice_workspace",
]

# Map packages to correct locations
[tool.setuptools.package-dir]
"" = "."
