[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neetcode"
version = "0.1.0"
description = "NeetCode Practice Framework"
requires-python = ">=3.8"
dependencies = ["pyyaml", "tomli;python_version<'3.11'"]

[project.scripts]
codegen = "codegen.cli:main"
practice = "practice_workspace.cli:main"

[project.entry-points."mkdocs.plugins"]
mindmaps-lastmod = "mkdocs_plugins.mindmaps_lastmod:MindmapsLastmodPlugin"

[tool.setuptools]
# Explicitly list all packages
packages = [
    # Root packages
    "generators",
    "mkdocs_plugins",
    "runner",
    "runner.utils",
    "runner.display", 
    "runner.analysis",
    "runner.core",
    # src/ packages (src layout)
    "leetcode_datasource",
    "leetcode_datasource.models",
    "leetcode_datasource.storage",
    "leetcode_datasource.serialization",
    "leetcode_datasource.fetchers",
    "codegen",
    "codegen.core",
    "codegen.core.helpers",
    "codegen.reference",
    "codegen.practice",
    "practice_workspace",
]

# Map src/ packages to correct locations
[tool.setuptools.package-dir]
"" = "."
"leetcode_datasource" = "src/leetcode_datasource"
"codegen" = "src/codegen"
"practice_workspace" = "src/practice_workspace"
